--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 // 1. Importamos los estilos globales que ya creamos
 import '../styles/global.css';
+import "../styles/custom.css";
+
 
 // 2. Definimos las "props" que este layout aceptará.
 // En este caso, un "title" para la pestaña del navegador.
