--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import AboutUs from '../components/AboutUs.astro';
 import Products from '../components/Products.astro';
 import Retread from '../components/Retread.astro';
 import Contact from '../components/Contact.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Rumbomotriz - Neumáticos y Rencauche para Minería">
@@ -19,6 +20,7 @@ import Contact from '../components/Contact.astro';
     <Products /> 
 	<Retread />
 	<Contact />
+	<Footer />
 
   </div>
 </Layout>
