--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
+
 
 body {
   font-family: 'Inter', sans-serif;
