--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,43 +1,30 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- About Us Section -->
-    <section class="w-full py-20" id="sobre-nosotros">
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-        <!-- Columna de Texto -->
-        <div class="flex flex-col gap-4">
-          <h2
-            class="text-white text-3xl md:text-4xl font-black leading-tight tracking-tighter"
-          >
-            Sobre Nosotros
-          </h2>
-          <p class="text-text-muted text-base font-normal leading-normal">
-            Con más de 20 años de trayectoria, Rumbomotriz se ha consolidado
-            como un socio estratégico para la industria minera. Nuestra misión
-            es proveer neumáticos de la más alta calidad y un servicio de
-            rencauche que garantice la continuidad y seguridad de sus
-            operaciones, combinando tecnología de punta con un profundo
-            conocimiento del sector.
-          </p>
-        </div>
+<section class="w-full py-20" id="sobre-nosotros">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+    <div class="flex flex-col gap-4">
+      <h2
+        class="text-light text-3xl md:text-4xl font-black leading-tight tracking-tighter"
+      >
+        Sobre Nosotros
+      </h2>
+      <p class="text-text-muted text-base font-normal leading-normal">
+        Con más de 20 años de trayectoria, Rumbomotriz se ha consolidado
+        como un socio estratégico para la industria minera. Nuestra misión
+        es proveer neumáticos de la más alta calidad y un servicio de
+        rencauche que garantice la continuidad y seguridad de sus
+        operaciones, combinando tecnología de punta con un profundo
+        conocimiento del sector.
+      </p>
+    </div>
 
-        <!-- Columna de Imagen -->
-        <div>
-          <img
-            class="w-full h-auto object-cover rounded-xl aspect-video"
-            data-alt="Modern industrial facility with large bay doors"
-            src="/images/about-us.png"
-            width="1920"
-            height="1080"
-            loading="lazy"
-          />
-        </div>
-      </div>
-    </section>
-  </body>
-</html>
+    <div>
+      <img
+        class="w-full h-auto object-cover rounded-xl aspect-video"
+        alt="Modern industrial facility with large bay doors"
+        src="/images/about-us.png"
+        width="1920"
+        height="1080"
+        loading="lazy"
+      />
+    </div>
+  </div>
+</section>
