--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -5,10 +5,9 @@ import ProductCard from "./ProductCard.astro";
 <section class="w-full py-20" id="neumaticos">
   <div class="flex flex-col gap-10">
     
-    <!-- Título y descripción -->
     <div class="flex flex-col gap-4 text-center items-center">
       <h2
-        class="text-white text-3xl md:text-4xl font-black leading-tight tracking-tighter max-w-2xl"
+        class="text-light text-3xl md:text-4xl font-black leading-tight tracking-tighter max-w-2xl"
       >
         Catálogo de Neumáticos para Minería
       </h2>
@@ -19,7 +18,6 @@ import ProductCard from "./ProductCard.astro";
       </p>
     </div>
 
-    <!-- Grid de productos -->
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
       <ProductCard
