--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -12,8 +12,9 @@ const { title, description, imgSrc, imgAlt } = Astro.props;
 <div
   class="flex flex-col rounded-xl border border-theme bg-background-card overflow-hidden group"
 >
-  <div class="aspect-square bg-background-main flex items-center justify-center p-4">
-    
+  <div
+    class="aspect-square bg-background-main flex items-center justify-center p-4"
+  >
     <img
       class="w-full h-full object-contain group-hover:scale-105 transition-transform duration-300"
       src={imgSrc}
@@ -22,7 +23,6 @@ const { title, description, imgSrc, imgAlt } = Astro.props;
       width="400"
       height="400"
     />
-
   </div>
 
   <div class="p-6 flex flex-col gap-4 flex-grow">
@@ -30,8 +30,12 @@ const { title, description, imgSrc, imgAlt } = Astro.props;
     <p class="text-text-muted text-sm flex-grow">{description}</p>
 
     <a
-      class="flex mt-2 min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-border-theme text-light text-sm font-bold leading-normal hover:bg-primary transition-colors"
       href="#contacto"
+      class="flex mt-2 min-w-[84px] cursor-pointer items-center justify-center
+         rounded-lg h-10 px-4
+         bg-gray-700 text-white
+         text-sm font-bold leading-normal
+         hover:bg-gray-600 transition-colors"
     >
       <span class="truncate">Solicitar Información</span>
     </a>
