--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,7 @@
 // 1. Importamos los estilos globales que ya creamos
 import '../styles/global.css';
 import "../styles/custom.css";
-// 2. Definimos las "props" que este layout aceptará.
-// En este caso, un "title" para la pestaña del navegador.
+import WhatsAppButton from '../components/WhatsAppButton.astro';
 export interface Props {
   title: string;
 }
@@ -55,5 +54,6 @@ const { title } = Astro.props;
 
 <body class="bg-background-main text-light font-display">
   <slot />
+  <WhatsAppButton />
 </body>
 </html>
